--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,145 +1,8 @@
-=======
-CHANGES
-=======
-
-0.7.6 (2009-11-30)
+1.0.2 (Unreleased)
 ------------------
 
-- Fixed ForbiddenAttribute for AddContentWizard
 
-
-0.7.5 (2009-11-19)
+1.0.1 (2010-01-19)
 ------------------
 
-- Update tests to work with z3c.form 2.2
-
-
-0.7.4 (2009-09-16)
-------------------
-
-- Fixed ForbiddenAttribute for EditDraftWizard
-
-
-0.7.3 (2009-09-07)
-------------------
-
-- Check draft container availability in draft content permission checker
-
-
-0.7.2 (2009-08-31)
-------------------
-
-- Fixed permissions for drafted content
-
-- Fixed removing submitted conent
-
-
-0.7.1 (2009-08-14)
-------------------
-
-- Fixed reindexing during content publish
-
-
-0.7.0 (2009-08-11)
-------------------
-
-- Added ability to retract content back to draft
-
-- Activity support moved to zojax.personal.content
-
-- Top contributors moved to zojax.personal.content
-
-- Added 'Remove' button to edit draft wizard
-
-- Added DraftedContentType, it adds checks for IDraftContainer availbility
-
-- Fixed content name validator
-
-- Fixed draft indexing on submit
-
-- Fixed zojax:draft provides
-
-- Use multi adapter (principal, draft content type) to get IDraftContainer
-
-
-0.6.0 (2009-06-21)
-------------------
-
-- Added 'saveable' zojax:draft attribute, if it set to false
-  user can't save draft to drafts container.
-
-- Remove zojax.content.space dependency
-
-- Remove zojax.content.permissions dependency
-
-- Make zojax.content.actions dependency optional
-
-
-0.5.0 (2009-06-05)
-------------------
-
-- Move IDraftedContent interface to zojax.content.type
-
-- Copyright changed to 'Zope Foundation and Contributors'
-
-- Added draft content type interface generation to simplify browser customizations
-
-- Added 'zojax.topcontributors' support
-
-
-0.4.3 (2009-05-07)
-------------------
-
-- Fixed location step in case with one location available
-
-- Check location constraints before publishing/submitting
-
-
-0.4.2 (2009-05-05)
-------------------
-
-- Fixed DraftSubmitTo index
-
-- Handle ValueError exception in field validation
-
-
-0.4.1 (2009-04-11)
-------------------
-
-- KeyError fixed during draft creat/submit
-
-- Fix interaction before check permission in content type checker
-
-
-0.4.0 (2009-04-08)
-------------------
-
-- Hide 'Location' step if only one location available
-
-- Added content activity support
-
-- Allow use add content wizard if user has submit permission
-
-- Do not use z3c.autoinclude
-
-
-0.3.0 (2009-03-26)
-------------------
-
-- Handle IContentViewView for content
-
-- Submitted draft: redirect to worksapce after reject/publish
-
-
-0.2.0 (2009-03-17)
-------------------
-
-- Added 'Save' button to edit draft wizard for last saveable step
-
-- Fixed isDraft index
-
-
-0.1.0 (2009-03-14)
-------------------
-
-- Initial release.
+- zojax initial release
